# catkin_realsense

./: README.md
src/filter_optimization/: CMakeLists.txt  package.xml
src/filter_optimization/src/: voxel_grid_optimization.cpp
src/io_files/: .desktop  888test_pointcloud_filtered.pcd  ans_matlab.pcd  cloud_cluster_0.pcd  cloud_cluster_1.pcd  debug.txt  pcd_filtered_surface.pcd  pcd_filtered_surface_filtered.pcd  pose_points_file (复件).txt  pose_points_file.txt  pose_points_surface1.txt  test_filtered.pcd  test_segmentation.pcd
src/io_files/平面实验/: pcd_filtered_surface.pcd  pose_points_surface1.txt
src/pointcloud_preprocess/: CMakeLists.txt  package.xml
src/pointcloud_preprocess/launch/: load_pcd_and_segmentation.launch  pre_process.launch  sub_cloud_and_filter.launch  sub_topic_sample.launch
src/pointcloud_preprocess/src/: cluster_extraction.cpp  disp_pcd_file.cpp  disp_point_coordinate.cpp  load_pcd_and_segmentation.cpp  load_pcd_file_and_filter.cpp  make_obb_and_extraction.cpp  pointcloud_topic_use_sample.cpp  pre_processing.cpp
src/surface_reconstruction/: CMakeLists.txt  README.md  package.xml
src/surface_reconstruction/cfg/: surface.yaml
src/surface_reconstruction/include/surface_reconstruction/: modify2.h  triangulation_modify.h  visualization.h
src/surface_reconstruction/launch/: reconstruction_and_dispersion.launch
src/surface_reconstruction/src/: bspline_fitting.cpp  bspline_fitting_and_dispersion.cpp  greedy_projection_triangulation.cpp  modify2.cpp  surface_reconstruction.cpp  test2.cpp  triangulation_modify.cpp  visualizition.cpp
